css/theme-2026.css
@charset "UTF-8";
@import url(//fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,300;0,400;0,600;0,700;1,400&family=Inconsolata&display=swap);
#top-github-link, #body #breadcrumbs {
  position: relative;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -o-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%); }

.button, .button-secondary {
  display: inline-block;
  padding: 7px 12px; }
  .button:active, .button-secondary:active {
    margin: 2px 0 -2px 0; }

body {
  background: #fff;
  color: #374151;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale; }

a {
  color: #0277B6; }
  a:hover {
    color: #075985; }

#body-inner a:hover {
  text-decoration: underline;
  text-decoration-style: dotted; }

pre {
  position: relative; }

.bg {
  background: #fff;
  border: 1px solid #eaeaea; }

b, strong, label, th {
  font-weight: 600; }

.default-animation, #header #logo-svg, #header #logo-svg path, #sidebar, #sidebar ul, #body, #body .padding, #body .nav {
  -webkit-transition: all 0.5s ease;
  -moz-transition: all 0.5s ease;
  transition: all 0.5s ease; }

fieldset {
  border: 1px solid #ddd; }

textarea, input[type="email"], input[type="number"], input[type="password"], input[type="search"], input[type="tel"], input[type="text"], input[type="url"], input[type="color"], input[type="date"], input[type="datetime"], input[type="datetime-local"], input[type="month"], input[type="time"], input[type="week"], select[multiple=multiple] {
  background-color: white;
  border: 1px solid #ddd;
  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.06); }
  textarea:hover, input[type="email"]:hover, input[type="number"]:hover, input[type="password"]:hover, input[type="search"]:hover, input[type="tel"]:hover, input[type="text"]:hover, input[type="url"]:hover, input[type="color"]:hover, input[type="date"]:hover, input[type="datetime"]:hover, input[type="datetime-local"]:hover, input[type="month"]:hover, input[type="time"]:hover, input[type="week"]:hover, select[multiple=multiple]:hover {
    border-color: #c4c4c4; }
  textarea:focus, input[type="email"]:focus, input[type="number"]:focus, input[type="password"]:focus, input[type="search"]:focus, input[type="tel"]:focus, input[type="text"]:focus, input[type="url"]:focus, input[type="color"]:focus, input[type="date"]:focus, input[type="datetime"]:focus, input[type="datetime-local"]:focus, input[type="month"]:focus, input[type="time"]:focus, input[type="week"]:focus, select[multiple=multiple]:focus {
    border-color: #0284C7;
    box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.06), 0 0 5px rgba(2, 132, 199, 0.5); }

#header {
  background: #075985;
  color: #fff;
  text-align: center;
  padding: 0rem 1rem 2rem 1rem; }
  #header a {
    display: inline-block; }
  #header #logo-svg {
    width: 8rem;
    height: 2rem; }
    #header #logo-svg path {
      fill: #fff; }

.searchbox {
  margin-top: 0.5rem;
  position: relative;
  border: 1px solid #38BDF8;
  background: #0369A1;
  border-radius: 4px; }
  .searchbox label {
    color: rgba(255, 255, 255, 0.8);
    position: absolute;
    left: 10px;
    top: 3px; }
  .searchbox span {
    color: rgba(255, 255, 255, 0.6);
    position: absolute;
    right: 10px;
    top: 3px;
    cursor: pointer; }
    .searchbox span:hover {
      color: rgba(255, 255, 255, 0.9); }
  .searchbox input {
    display: inline-block;
    color: #fff;
    width: 100%;
    height: 30px;
    background: transparent;
    border: 0;
    padding: 0 25px 0 30px;
    margin: 0;
    font-weight: 400; }
    .searchbox input::-webkit-input-placeholder {
      color: rgba(255, 255, 255, 0.6); }
    .searchbox input::-moz-placeholder {
      color: rgba(255, 255, 255, 0.6); }
    .searchbox input:-moz-placeholder {
      color: rgba(255, 255, 255, 0.6); }
    .searchbox input:-ms-input-placeholder {
      color: rgba(255, 255, 255, 0.6); }

#sidebar-toggle {
  display: none; }
  @media only all and (max-width: 47.938em) {
    #sidebar-toggle {
      display: inline-block; } }

#sidebar {
  background-color: #1e293b;
  position: fixed;
  top: 0;
  width: 300px;
  bottom: 0;
  left: 0;
  font-weight: 500;
  font-size: 15px; }
  #sidebar a {
    color: #ffffff; }
    #sidebar a:hover, #sidebar a.button {
      color: white; }
    #sidebar a.subtitle {
      color: rgba(204, 204, 204, 0.6); }
  #sidebar hr {
    border-bottom: 1px solid #0f172a; }
  #sidebar a.padding {
    padding: 0 1rem; }
  #sidebar h5 {
    margin: 2rem 0 0;
    position: relative;
    line-height: 2; }
    #sidebar h5 a {
      display: block;
      margin-left: 0;
      margin-right: 0;
      padding-left: 1rem;
      padding-right: 1rem; }
    #sidebar h5 i {
      color: rgba(204, 204, 204, 0.6);
      position: absolute;
      right: 0.6rem;
      top: 0.7rem;
      font-size: 80%; }
    #sidebar h5.parent a {
      background: #0f172a;
      color: #d9d9d9 !important; }
    #sidebar h5.active a {
      background: #fff;
      color: #374151 !important; }
    #sidebar h5.active i {
      color: #374151 !important; }
  #sidebar h5 + ul.topics {
    display: none;
    margin-top: 0; }
  #sidebar h5.parent + ul.topics, #sidebar h5.active + ul.topics {
    display: block; }
  #sidebar ul {
    list-style: none;
    padding: 0;
    margin: 0; }
    #sidebar ul.searched a {
      color: #999999; }
    #sidebar ul.searched .search-match a {
      color: #e6e6e6; }
      #sidebar ul.searched .search-match a:hover {
        color: white; }
    #sidebar ul.topics {
      margin: 0 1rem; }
      #sidebar ul.topics.searched ul {
        display: block; }
      #sidebar ul.topics ul {
        display: none;
        padding-bottom: 1rem; }
        #sidebar ul.topics ul ul {
          padding-bottom: 0; }
      #sidebar ul.topics li.parent ul, #sidebar ul.topics > li.active ul {
        display: block; }
/* ... */

